# keyplus

./: .gitignore  LICENSE  README.md  pyproject.toml  temp_notes.md
.github/workflows/: build-deb.yml  build-snap.yml  build-windows.yml
app/: keyplus.py  storage.py
app/cli/: main.py
core/: Cargo.toml
core/src/: lib.rs  temp_storage.rs
setup/windows/: engine.py  installer.py
src/: main.py
src/cli/: cli_main.py  help.py
src/keyplus/: __main__.py
src/logic/: ai-entry-point.py  auth.py  crypto.py  history.py  session.py  vault.py
src/logic/storage/: storage.py
src/ui/gui/: add_entry.py  dash.py  gui_main.py  login.py  setup.py  view_entry.py
