[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "keyplus"
version = "0.2.9"
description = "Local-first password vault with CLI and optional GUI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

authors = [
  { name = "ZFordDev", email = "zforddev@gmail.com" }
]

maintainers = [
  { name = "ZFordDev", email = "zforddev@gmail.com" }
]

keywords = ["password", "offline", "CLI", "UI", "vault", "security"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Security :: Cryptography"
]

dependencies = [
  "cryptography>=42.0.0",
  "rich>=13.0.0",
  "prompt-toolkit>=3.0.0",
  "argon2-cffi>=23.1.0",
  "pyside6",
  "pywin32; sys_platform == 'win32'"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff"
]

[project.urls]
Homepage = "https://github.com/ZFordDev/keyplus"
Documentation = "https://docs.zford.dev/zforddev/keyplus"
Repository = "https://github.com/ZFordDev/keyplus.git"
"Bug Tracker" = "https://github.com/ZFordDev/keyplus/issues"
Changelog = "https://github.com/ZFordDev/keyplus/blob/main/CHANGELOG.md"

[project.scripts]
keyplus = "keyplus.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["keyplus*"]