[package]
name = "keyplus"
version = "0.0.1"
authors = ["ZFordDev <zforddev@gmail.com>"]
edition = "2024"
description = "Core logic for the password vault"
license = "MIT"
repository = "https://github.com/ZFordDev/keyplus"
documentation = "https://docs.zford.dev/zforddev/keyplus"

[dependencies]
pyo3 = { version = "0.29", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


#[dev-dependencies]

#[features]

#[profile.dev]
#
#[profile.windows]
#
#[profile.debian]
